--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^6.3.0",
     "class-validator": "^0.14.1",
     "ldapjs": "^3.0.7",
     "passport-jwt": "^4.0.1",
